liblumen_codegen/lib/include/eir/Builder.h

class Type;
typedef struct MLIROpaqueBlock *MLIRBlockRef;
typedef struct MLIROpaqueAttribute *MLIRAttributeRef;
struct MapAction {
  MapActionType action;
  MLIRValueRef key;
  MLIRValueRef value;
};
struct MapUpdate {
  MLIRValueRef map;
  MLIRBlockRef ok;
  MLIRBlockRef err;
  MapAction *actionsv;
  size_t actionsc;
};
struct KeyValuePair {
  MLIRAttributeRef key;
  MLIRAttributeRef value;
};
 // namespace eir

typedef struct OpaqueModuleBuilder *MLIRModuleBuilderRef;
void MLIRBuildMapOp(MLIRModuleBuilderRef builder, eir::MapUpdate op);
MLIRValueRef MLIRBuildIsEqualOp(MLIRModuleBuilderRef, MLIRValueRef lhs, MLIRValueRef rhs, bool isExact);
MLIRValueRef MLIRBuildIsNotEqualOp(MLIRModuleBuilderRef, MLIRValueRef lhs, MLIRValueRef rhs, bool isExact);
MLIRValueRef MLIRBuildLessThanOrEqualOp(MLIRModuleBuilderRef, MLIRValueRef lhs, MLIRValueRef rhs);
MLIRValueRef MLIRBuildLessThanOp(MLIRModuleBuilderRef, MLIRValueRef lhs, MLIRValueRef rhs);
MLIRValueRef MLIRBuildGreaterThanOrEqualOp(MLIRModuleBuilderRef, MLIRValueRef lhs, MLIRValueRef rhs);
MLIRValueRef MLIRBuildGreaterThanOp(MLIRModuleBuilderRef, MLIRValueRef lhs, MLIRValueRef rhs);
MLIRValueRef MLIRBuildLogicalAndOp(MLIRModuleBuilderRef, MLIRValueRef lhs, MLIRValueRef rhs);
MLIRValueRef MLIRBuildLogicalOrOp(MLIRModuleBuilderRef, MLIRValueRef lhs, MLIRValueRef rhs);
MLIRValueRef MLIRCons(MLIRModuleBuilderRef, MLIRValueRef head, MLIRValueRef tail);
MLIRValueRef MLIRConstructTuple(MLIRModuleBuilderRef, MLIRValueRef *elements, unsigned num_elements);
MLIRValueRef MLIRConstructMap(MLIRModuleBuilderRef, eir::MapEntry *entries, unsigned num_entries);
//===----------------------------------------------------------------------===//
// Constants
//===----------------------------------------------------------------------===//

MLIRValueRef MLIRBuildConstantFloat(MLIRModuleBuilderRef b, double value, bool isPacked);
MLIRAttributeRef MLIRBuildFloatAttr(MLIRModuleBuilderRef b, double value, bool isPacked);
MLIRValueRef MLIRBuildConstantInt(MLIRModuleBuilderRef b, int64_t value, unsigned width);
MLIRAttributeRef MLIRBuildIntAttr(MLIRModuleBuilderRef b, int64_t value, unsigned width);
MLIRValueRef MLIRBuildConstantBigInt(MLIRModuleBuilderRef b, const char *str, unsigned width);
MLIRAttributeRef MLIRBuildBigIntAttr(MLIRModuleBuilderRef b, const char *str, unsigned width);
MLIRValueRef MLIRBuildConstantAtom(MLIRModuleBuilderRef b, const char *str, uint64_t id, unsigned width);
MLIRAttributeRef MLIRBuildAtomAttr(MLIRModuleBuilderRef b, const char *str, uint64_t id, unsigned width);
MLIRValueRef MLIRBuildConstantBinary(MLIRModuleBuilderRef b, const char *str, unsigned size, uint64_t header, uint64_t flags, unsigned width);
MLIRAttributeRef MLIRBuildBinaryAttr(MLIRModuleBuilderRef b, const char *str, unsigned size, uint64_t header, uint64_t flags, unsigned width);
MLIRValueRef MLIRBuildConstantNil(MLIRModuleBuilderRef b, int64_t value, unsigned width);
MLIRAttributeRef MLIRBuildNilAttr(MLIRModuleBuilderRef b, int64_t value, unsigned width);
MLIRValueRef MLIRBuildConstantList(MLIRModuleBuilderRef b, const MLIRAttributeRef *elements, int num_elements);
MLIRAttributeRef MLIRBuildListAttr(MLIRModuleBuilderRef b, const MLIRAttributeRef *elements, int num_elements);
MLIRValueRef MLIRBuildConstantTuple(MLIRModuleBuilderRef b, const MLIRAttributeRef *elements, int num_elements);
MLIRAttributeRef MLIRBuildTupleAttr(MLIRModuleBuilderRef b, const MLIRAttributeRef *elements, int num_elements);
MLIRValueRef MLIRBuildConstantMap(MLIRModuleBuilderRef b, const eir::KeyValuePair *elements, int num_elements);
MLIRAttributeRef MLIRBuildMapAttr(MLIRModuleBuilderRef b, const eir::KeyValuePair *elements, int num_elements);
//===----------------------------------------------------------------------===//
// Type Checking
//===----------------------------------------------------------------------===//

MLIRValueRef MLIRBuildIsTypeTupleWithArity(MLIRModuleBuilderRef builder, MLIRValueRef value, unsigned arity);
MLIRValueRef MLIRBuildIsTypeList(MLIRModuleBuilderRef builder, MLIRValueRef value);
MLIRValueRef MLIRBuildIsTypeNonEmptyList(MLIRModuleBuilderRef builder, MLIRValueRef value);
MLIRValueRef MLIRBuildIsTypeNil(MLIRModuleBuilderRef builder, MLIRValueRef value);
MLIRValueRef MLIRBuildIsTypeMap(MLIRModuleBuilderRef builder, MLIRValueRef value);
MLIRValueRef MLIRBuildIsTypeNumber(MLIRModuleBuilderRef builder, MLIRValueRef value);
MLIRValueRef MLIRBuildIsTypeFloat(MLIRModuleBuilderRef builder, MLIRValueRef value);
MLIRValueRef MLIRBuildIsTypeInteger(MLIRModuleBuilderRef builder, MLIRValueRef value);
MLIRValueRef MLIRBuildIsTypeFixnum(MLIRModuleBuilderRef builder, MLIRValueRef value);
MLIRValueRef MLIRBuildIsTypeBigInt(MLIRModuleBuilderRef builder, MLIRValueRef value);