compiler/codegen/src/builder/ffi.rs


    pub fn MLIRBuildMapOp(builder: ModuleBuilderRef, op: MapUpdate);
    pub fn MLIRBuildIsEqualOp(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        lhs: ValueRef,
        rhs: ValueRef,
        is_exact: bool,
    ) -> ValueRef;
    pub fn MLIRBuildIsNotEqualOp(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        lhs: ValueRef,
        rhs: ValueRef,
        is_exact: bool,
    ) -> ValueRef;
    pub fn MLIRBuildLessThanOrEqualOp(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        lhs: ValueRef,
        rhs: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildLessThanOp(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        lhs: ValueRef,
        rhs: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildGreaterThanOrEqualOp(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        lhs: ValueRef,
        rhs: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildGreaterThanOp(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        lhs: ValueRef,
        rhs: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildLogicalAndOp(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        lhs: ValueRef,
        rhs: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildLogicalOrOp(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        lhs: ValueRef,
        rhs: ValueRef,
    ) -> ValueRef;

    pub fn MLIRCons(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        head: ValueRef,
        tail: ValueRef,
    ) -> ValueRef;
    pub fn MLIRConstructTuple(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        elements: *const ValueRef,
        num_elements: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRConstructMap(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        pairs: *const MapEntry,
        num_pairs: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildBinaryPush(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        head: ValueRef,
        tail: ValueRef,
        size: ValueRef,
        spec: &BinarySpecifier,
        ok_block: BlockRef,
        err_block: BlockRef,
    );

    pub fn MLIRIsIntrinsic(name: *const libc::c_char) -> bool;
    pub fn MLIRBuildIntrinsic(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        name: *const libc::c_char,
        argv: *const ValueRef,
        argc: libc::c_uint,
    ) -> ValueRef;

    //---------------
    // Constants
    //---------------

    pub fn MLIRBuildConstantFloat(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: f64,
    ) -> ValueRef;
    pub fn MLIRBuildFloatAttr(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: f64,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantInt(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: i64,
    ) -> ValueRef;
    pub fn MLIRBuildIntAttr(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: i64,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantBigInt(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: *const libc::c_char,
        width: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildBigIntAttr(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: *const libc::c_char,
        width: libc::c_uint,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantAtom(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: *const libc::c_char,
        id: u64,
    ) -> ValueRef;
    pub fn MLIRBuildAtomAttr(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: *const libc::c_char,
        id: u64,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantBinary(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: *const libc::c_char,
        size: libc::c_uint,
        header: u64,
        flags: u64,
    ) -> ValueRef;
    pub fn MLIRBuildBinaryAttr(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: *const libc::c_char,
        size: libc::c_uint,
        header: u64,
        flags: u64,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantNil(builder: ModuleBuilderRef, loc: LocationRef) -> ValueRef;
    pub fn MLIRBuildNilAttr(builder: ModuleBuilderRef, loc: LocationRef) -> AttributeRef;
    pub fn MLIRBuildConstantList(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        elements: *const AttributeRef,
        num_elements: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildListAttr(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        elements: *const AttributeRef,
        num_elements: libc::c_uint,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantTuple(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        elements: *const AttributeRef,
        num_elements: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildTupleAttr(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        elements: *const AttributeRef,
        num_elements: libc::c_uint,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantMap(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        elements: *const KeyValuePair,
        num_elements: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildMapAttr(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        elements: *const KeyValuePair,
        num_elements: libc::c_uint,
    ) -> AttributeRef;

    //---------------
    // Type Checking
    //---------------

    pub fn MLIRBuildIsTypeTupleWithArity(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
        arity: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeList(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeNonEmptyList(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeNil(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeMap(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeNumber(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeFloat(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeInteger(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeFixnum(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeBigInt(
        builder: ModuleBuilderRef,
        loc: LocationRef,
        value: ValueRef,
    ) -> ValueRef;
}
